# gn-build

config/: BUILD.gn  BUILDCONFIG.gn
utils/: codegen.gni  embed.gni  embed.py
